--- a/index.html
+++ b/index.html
@@ -22,47 +22,9 @@
     // Jika dah ada, tak perlu apa-apa
     if (window.XLSX) return;
 
-    // Helper umum: muat <script> sekali
-    window.loadScriptOnce = window.loadScriptOnce || (function () {
-      const loaded = new Set();
-      return function loadScriptOnce(url) {
-        return new Promise((resolve, reject) => {
-          if (loaded.has(url)) return resolve();
-          const s = document.createElement('script');
-          s.src = url;
-          s.async = true;
-          s.onload = () => { loaded.add(url); resolve(); };
-          s.onerror = () => reject(new Error('Gagal muat: ' + url));
-          document.head.appendChild(s);
-        });
-      };
-    })();
+    // Helper umum: muat 
+<!-- removed duplicate ensureXLSXReady block -->
 
-    // Override/definisi semula: pastikan XLSX wujud, cuba 3 CDN
-    window.ensureXLSXReady = async function ensureXLSXReady() {
-      if (window.XLSX) return;
-      const cdns = [
-        'https://cdn.jsdelivr.net/npm/xlsx@0.19.3/dist/xlsx.full.min.js',
-        'https://unpkg.com/xlsx@0.19.3/dist/xlsx.full.min.js',
-        'https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.19.3/xlsx.full.min.js'
-      ];
-      let lastErr;
-      for (const url of cdns) {
-        try {
-          await window.loadScriptOnce(url);
-          if (window.XLSX) {
-            console.log('[XLSX] Loaded from', url);
-            return;
-          }
-        } catch (e) {
-          lastErr = e;
-        }
-      }
-      console.error('[XLSX] Gagal dimuat dari semua CDN.', lastErr || '');
-      throw new Error('XLSX gagal dimuat.');
-    };
-  })();
-</script>
 
   <!-- Google Identity Services (Sign-In) -->
   <script src="https://accounts.google.com/gsi/client" async defer></script>
@@ -1038,164 +1000,23 @@ function todayIso(){
 }
 
 // === MONITOR VIEW ===
-async function showMonitorAll(){
-  showPage('monitorAllSection');
-  const dateInput = document.getElementById('monitorDate');
-  if (!dateInput.value) dateInput.value = todayIso();
-  await loadMonitor(); // first load
-  startMonitorPolling();
-}
+async 
+/* removed duplicate function */
 
-function startMonitorPolling(){
-  stopMonitorPolling();
-  monitorTimer = setInterval(loadMonitor, POLL_MS);
-}
-function stopMonitorPolling(){
-  if (monitorTimer) { clearInterval(monitorTimer); monitorTimer=null; }
-}
-async function refreshMonitorNow(){
-  await loadMonitor(true);
-}
 
-async function loadMonitor(dateStr) {
-  const container = document.getElementById('monitorAllContainer');
-  if (!container) return;
 
-  // Tarikh dari input jika tidak diberi
-  const chosen = (dateStr || document.getElementById('monitorDate')?.value || '').trim();
+/* removed duplicate function */
 
-  // Papar skeleton sementara
-  container.innerHTML = `
-    <div class="text-muted small mb-2">Memuat data monitor…</div>
-    <div class="row g-2">
-      <div class="col-12 col-md-4"><div class="card placeholder-wave"><div class="card-body">
-        <div class="placeholder col-8 mb-2"></div>
-        <div class="placeholder col-6"></div>
-      </div></div></div>
-      <div class="col-12 col-md-4"><div class="card placeholder-wave"><div class="card-body">
-        <div class="placeholder col-8 mb-2"></div>
-        <div class="placeholder col-6"></div>
-      </div></div></div>
-      <div class="col-12 col-md-4"><div class="card placeholder-wave"><div class="card-body">
-        <div class="placeholder col-8 mb-2"></div>
-        <div class="placeholder col-6"></div>
-      </div></div></div>
-    </div>`;
 
-  // Util kecil: pembantu fetch + parse JSON dengan mesej ralat yang jelas
-  async function fetchJSON(url) {
-    const res = await fetch(url, { method: 'GET', credentials: 'omit' });
-    const text = await res.text();
-    let json;
-    try {
-      json = JSON.parse(text);
-    } catch (e) {
-      // Jika HTML (<!DOCTYPE …) -> biasanya URL silap / token tak dihantar
-      throw new Error('Respons bukan JSON sah daripada pelayan (mungkinkah URL/token salah?).');
-    }
-    return json;
-  }
+/* removed duplicate function */
 
-  // Bina URL
-  const qs = new URLSearchParams();
-  qs.set('action', 'getNadiMonitor');
-  if (chosen) qs.set('date', chosen); // sokong "yyyy-MM-dd" atau "dd/MM/yyyy"
-  if (typeof ID_TOKEN === 'string' && ID_TOKEN) qs.set('id_token', ID_TOKEN);
+async 
+/* removed duplicate function */
 
-  // Muat data
-  let json;
-  try {
-    json = await fetchJSON(`${SCRIPT_URL}?${qs.toString()}`);
-  } catch (err) {
-    container.innerHTML = `
-      <div class="alert alert-danger">
-        <div class="fw-bold mb-1">Gagal memuat monitor</div>
-        <div>${err.message || err}</div>
-        <div class="small text-muted mt-1">Semak semula <code>SCRIPT_URL</code>, <code>ID_TOKEN</code>, dan capaian internet.</div>
-      </div>`;
-    if (typeof toast === 'function') toast('Ralat', 'Gagal memuat monitor', 'danger');
-    return;
-  }
 
-  // Semak status
-  if (!json || json.status !== 'success') {
-    const msg = (json && (json.message || json.code)) || 'Action tidak sah / akses ditolak';
-    container.innerHTML = `
-      <div class="alert alert-warning">
-        <div class="fw-bold mb-1">Tidak dapat memuat data monitor</div>
-        <div>${msg}</div>
-        <div class="small text-muted mt-1">Pastikan anda telah sign-in dan akaun berada dalam allowlist.</div>
-      </div>`;
-    if (typeof toast === 'function') toast('Makluman', String(msg), 'warning');
-    return;
-  }
+async 
+/* removed duplicate function */
 
-  // Bentuk data: { status:'success', date:'dd/MM/yyyy', data:[{activityId,title,programDate,counts:{layak,takLayak,total}}] }
-  const monitorDate = json.date || chosen || '';
-  const items = Array.isArray(json.data) ? json.data : [];
-
-  // Jika tiada sesi pada tarikh dipilih
-  if (!items.length) {
-    container.innerHTML = `
-      <div class="text-center text-muted py-4">
-        Tiada sesi ditemui untuk tarikh <span class="fw-semibold">${monitorDate || '(tidak ditentukan)'}</span>.
-      </div>`;
-    return;
-  }
-
-  // Render kad ringkasan setiap sesi
-  const now = new Date();
-  const rendered = items.map((s) => {
-    const layak = Number(s?.counts?.layak || 0);
-    const tak = Number(s?.counts?.takLayak || 0);
-    const tot = Number(s?.counts?.total || (layak + tak));
-
-    // Pilih warna ringkas ikut status (hanya kosmetik)
-    const barLayak = Math.round(tot ? (layak / tot) * 100 : 0);
-    const barTak = Math.max(0, 100 - barLayak);
-
-    return `
-      <div class="col-12 col-md-6 col-lg-4">
-        <div class="card h-100 shadow-sm">
-          <div class="card-body">
-            <div class="d-flex justify-content-between align-items-start mb-2">
-              <div>
-                <div class="fw-bold">${s.title || 'Tanpa Tajuk'}</div>
-                <div class="text-muted small">${s.programDate || monitorDate}</div>
-              </div>
-              <span class="badge bg-secondary">ID: ${s.activityId || '-'}</span>
-            </div>
-
-            <div class="mb-2">
-              <div class="d-flex justify-content-between small text-muted">
-                <span>Layak</span><span>${layak}</span>
-              </div>
-              <div class="progress" role="progressbar" aria-label="Layak vs Tidak Layak">
-                <div class="progress-bar" style="width:${barLayak}%"></div>
-                <div class="progress-bar bg-danger" style="width:${barTak}%"></div>
-              </div>
-            </div>
-
-            <div class="d-flex gap-2 mt-3">
-              <span class="badge bg-success">Layak: ${layak}</span>
-              <span class="badge bg-danger">Tidak Layak: ${tak}</span>
-              <span class="badge bg-primary">Jumlah: ${tot}</span>
-            </div>
-          </div>
-        </div>
-      </div>`;
-  }).join('');
-
-  container.innerHTML = `
-    <div class="d-flex justify-content-between align-items-center mb-2">
-      <div class="small text-muted">
-        Tarikh dipantau: <span class="fw-semibold">${monitorDate || '(tidak ditentukan)'}</span>
-      </div>
-      <div class="small text-muted">Dikemas kini: ${now.toLocaleTimeString()}</div>
-    </div>
-    <div class="row g-2">${rendered}</div>
-  `;
-}
 
 function openSessionDetail(activityId){
   location.hash = '#nadi?activityId='+encodeURIComponent(activityId);
@@ -1205,10 +1026,9 @@ function openSessionDetail(activityId){
 // function escapeHtml(s){ ... }
 
 // Henti polling bila keluar dari skrin monitor
-window.addEventListener('hashchange', ()=>{
-  const onMonitor = location.hash.includes('#monitor');
-  if (!onMonitor) stopMonitorPolling();
-});
+
+/* removed duplicate hashchange listener */
+
 
 // ✅ EXPOSE ke global (penting untuk onclick & button)
 window.showMonitorAll = showMonitorAll;
@@ -3841,9 +3661,9 @@ window.refreshMonitorNow  = refreshMonitorNow;
 window.stopMonitorPolling = stopMonitorPolling;
 
 // (Pilihan) Hentikan polling bila bertukar hash dan bukan monitor
-window.addEventListener('hashchange', () => {
-  if (!location.hash.includes('#monitor')) {
-    try { stopMonitorPolling(); } catch(e){}
+
+/* removed duplicate hashchange(stopPolling) */
+ } catch(e){}
   }
 });
 /* =======================
