--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="ms">
 <head>
+
+  <!-- Performance resource hints -->
+  <link rel="preconnect" href="https://cdn.jsdelivr.net">
+  <link rel="preconnect" href="https://cdnjs.cloudflare.com">
+  <link rel="preconnect" href="https://unpkg.com">
+  <link rel="dns-prefetch" href="https://cdn.jsdelivr.net">
+  <link rel="dns-prefetch" href="https://cdnjs.cloudflare.com">
+  <link rel="dns-prefetch" href="https://unpkg.com">
+
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
@@ -279,6 +288,13 @@
   }
   .nadi-summary-card.layak { border-top: 4px solid var(--success); }
   .nadi-summary-card.tak-layak { border-top: 4px solid var(--danger); }
+
+  /* === Light Theme Overrides (added) === */
+  body{ background:#f7f9fc; color:#222; }
+  .navbar-main{ background:#ffffff; }
+  .page-header{ background:linear-gradient(135deg,#4e73df,#1cc88a); }
+  .card{ background:#ffffff; }
+
 </style>
 </head>
 <body>
@@ -312,7 +328,7 @@
   <nav class="navbar navbar-expand-lg navbar-main sticky-top">
     <div class="container">
       <a class="navbar-brand" href="#dashboard">
-        <img id="brandLogo" alt="Logo" style="width:32px;height:32px;border-radius:8px;object-fit:cover;border:1px solid rgba(0,0,0,.08)">
+        <img loading="lazy" id="brandLogo" alt="Logo" style="width:32px;height:32px;border-radius:8px;object-fit:cover;border:1px solid rgba(0,0,0,.08)">
         <span>Klinik SihatSokmo</span>
       </a>
 
@@ -487,7 +503,25 @@
   </div>
   <div>
     <label class="form-label mb-1">Tarikh Program</label>
-    <input id="nadiProgramDate" type="date" class="form-control form-control-sm">
+    <input id="nadiProgramDate"
+      <!-- Live Session Picker (baru) -->
+      <div class="row g-2 align-items-center mb-3" id="liveSessionPickerRow">
+        <div class="col-md-7">
+          <label class="form-label">Pilih Sesi (Live) — hari yang sama</label>
+          <div class="input-group">
+            <select id="nadiSessionSelect" class="form-select">
+              <option value="">(Memuat senarai sesi…)</option>
+            </select>
+            <button class="btn btn-outline-secondary" type="button" id="btnRefreshSessions"><i class="fa-solid fa-rotate-right"></i> Segar</button>
+            <button class="btn btn-primary" type="button" id="btnUseSession"><i class="fa-solid fa-link"></i> Guna</button>
+          </div>
+          <div class="form-text">Sesi ditentukan oleh <b>Tajuk Program</b> + <b>Tarikh</b>. Guna pilihan ini untuk kongsi jadual antara laptop A & B.</div>
+        </div>
+        <div class="col-md-5 text-md-end">
+          <div class="small text-muted">Sesi aktif: <span id="liveSessionLabel" class="fw-semibold">-</span></div>
+        </div>
+      </div>
+ type="date" class="form-control form-control-sm">
   </div>
   <div class="ms-auto d-flex gap-2">
     <button id="btnNadiSaveActivity" class="btn btn-sm btn-primary">
@@ -2164,6 +2198,22 @@ function setupNADI(){
 
   // [TAMBAH] Simpan semua aktiviti (tajuk + semua baris)
   const btnSaveAll = document.getElementById('btnNadiSaveActivity');
+  // Wire session picker
+  document.getElementById('btnRefreshSessions')?.addEventListener('click', loadLiveSessionsForDate);
+  document.getElementById('btnUseSession')?.addEventListener('click', useSelectedSession);
+  loadLiveSessionsForDate();
+  updateLiveSessionBadge();
+  // Recompute session id when inputs change (unless locked by session selection)
+  ['nadiProgramTitle','nadiProgramDate'].forEach(id=>{
+    const el = document.getElementById(id);
+    el?.addEventListener('input', ()=>{
+      if (NADI_SESSION_LOCKED) return;
+      NADI_LIVE_SESSION_ID = computeSessionIdFromInputs();
+      updateLiveSessionBadge();
+      startNadiLiveSync();
+    });
+  });
+
   btnSaveAll?.addEventListener('click', saveNadiProgramActivity);
 
   // [TAMBAH] Export Excel format aktiviti
@@ -2578,7 +2628,7 @@ function generateWhatsAppReport(data) {
   const reportHTML = `
     <div class="whatsapp-report">
       <div class="whatsapp-report-header">
-        <img src="${LOGO_URL}" alt="Logo Klinik" class="whatsapp-report-logo" onerror="this.src='https://via.placeholder.com/50x50.png?text=KS'">
+        <img loading="lazy" src="${LOGO_URL}" alt="Logo Klinik" class="whatsapp-report-logo" onerror="this.src='https://via.placeholder.com/50x50.png?text=KS'">
         <div>
           <div class="whatsapp-report-title">Laporan Saringan Kesihatan Bersama NADI</div>
           <div class="whatsapp-report-subtitle">Klinik SihatSokmo - Program PEKA B40</div>
@@ -3665,130 +3715,109 @@ function activateFromHash(){
 }
 </script>
 
-<!-- ===== Live Sync Enhancements (non-breaking) ===== -->
-<script>
-(function () {
-  'use strict';
+  <script>
+  (function(){
+    // === Auto-refresh (gentle) ===
+    // Refresh every REFRESH_MS if the user is idle for IDLE_MS, page visible, and tiada modal terbuka.
+    var REFRESH_MS = 10 * 60 * 1000; // 10 min
+    var IDLE_MS = 60 * 1000;         // 60s idle
+    var lastActive = Date.now();
+    var idleTimer;
 
-  // Guard until app code is loaded
-  function onReady(fn){
-    if (document.readyState === 'loading') {
-      document.addEventListener('DOMContentLoaded', fn, { once: true });
-    } else {
-      fn();
-    }
-  }
-
-  // Helpers
-  function ensureRowId(row){
-    if (!row) return '';
-    if (!row.dataset.rowId) {
-      row.dataset.rowId = 'row_' + Math.random().toString(36).slice(2);
-    }
-    return row.dataset.rowId;
-  }
-
-  async function announceNewRowLive(row){
-    try{
-      if (!window.NADI_LIVE_SESSION_ID || !window.postForm) return;
-      ensureRowId(row);
-      const payload = [{
-        id: row.dataset.rowId,
-        nama: '', ic: '', tel: '', alamat: '',
-        bp: '', pr: '', dxtType: row.querySelector('.nadi-dxt-type')?.value || 'Fasting',
-        dxt: '', tinggi: '', berat: '', bmi: '',
-        layak: !!row.querySelector('.nadi-layak')?.checked,
-        takLayak: !!row.querySelector('.nadi-taklayak')?.checked,
-        tcaDate: '', tcaTime: '', tcaStaff: '', remark: ''
-      }];
-      await window.postForm({
-        action: 'saveNadiLive',
-        sessionId: window.NADI_LIVE_SESSION_ID,
-        items: JSON.stringify(payload)
-      }, { silent:true });
-    }catch(e){ /* silent */ }
-  }
-
-  // Attach input/change listeners once
-  function attachLiveListenersOnce(){
-    if (window.__liveListenersAttached) return;
-    window.__liveListenersAttached = true;
-
-    document.addEventListener('input', (e) => {
-      const el = e.target;
-      const row = el.closest?.('.nadi-row');
-      if (!row || typeof window.queueSaveNadiLive !== 'function') return;
-
-      if (el.matches('.nadi-nama, .nadi-ic, .nadi-tel, .nadi-alamat, .nadi-bp, .nadi-pr, .nadi-dxt, .nadi-tinggi, .nadi-berat, .nadi-bmi, .nadi-remark')) {
-        ensureRowId(row);
-        window.queueSaveNadiLive(row);
-      }
+    function markActive(){ lastActive = Date.now(); }
+    ['mousemove','keydown','scroll','touchstart','click'].forEach(function(ev){
+      window.addEventListener(ev, markActive, {passive:true});
     });
 
-    document.addEventListener('change', (e) => {
-      const el = e.target;
-      const row = el.closest?.('.nadi-row');
-      if (!row || typeof window.queueSaveNadiLive !== 'function') return;
+    function anyModalOpen(){
+      return !!document.querySelector('.modal.show');
+    }
+    function visible(){ return !document.hidden; }
 
-      if (el.matches('.nadi-layak, .nadi-taklayak, .nadi-dxt-type, .nadi-tca-date, .nadi-tca-time, .nadi-staff')) {
-        ensureRowId(row);
-        window.queueSaveNadiLive(row);
-      }
-    });
-  }
+    function doRefresh(){
+      // Only soft reload if hash stays the same; this preserves your SPA behaviour.
+      // If you have exposed functions to refresh sections, call them here by hash.
+      var idleLong = (Date.now() - lastActive) >= IDLE_MS;
+      if (!idleLong || !visible() || anyModalOpen()) return;
 
-  // Monkey patch addNadiRow so that new rows appear live on other laptops
-  function wrapAddNadiRow(){
-    if (window.__addRowWrapped) return;
-    if (typeof window.addNadiRow !== 'function') return; // respect original structure
-    window.__addRowWrapped = true;
-
-    const _origAdd = window.addNadiRow;
-    window.addNadiRow = function(){
-      const before = document.querySelectorAll('#nadiContainer .nadi-row').length;
-      const ret = _origAdd.apply(this, arguments);
-      onReady(() => {
-        // find the actual added row (last one or by count difference)
-        let row = null;
-        const rows = document.querySelectorAll('#nadiContainer .nadi-row');
-        if (rows.length) {
-          row = rows[rows.length - 1];
+      // Try to call section-level refreshers if exist; fallback to full reload.
+      var h = (location.hash || '#dashboard').toLowerCase();
+      try {
+        if (typeof window.refreshDashboard === 'function' && (h==='#' || h==='#dashboard')) {
+          window.refreshDashboard();
+          return;
         }
-        if (row) {
-          ensureRowId(row);
-          announceNewRowLive(row);
+        if (typeof window.refreshMonitorNow === 'function' && h.indexOf('#monitor')===0) {
+          window.refreshMonitorNow();
+          return;
         }
+        // Other sections can be added similarly, else fallback:
+      } catch(e){ /* ignore and fallback */ }
+      location.reload();
+    }
+
+    // kick interval
+    setInterval(doRefresh, REFRESH_MS);
+
+    // Expose optional manual hook if you want to trigger from UI
+    window.__autoRefreshNow = doRefresh;
+  })();
+  
+/* ===== Session Picker (Live) ===== */
+let NADI_SESSION_LOCKED = false;
+function computeSessionIdFromInputs(){
+  const title = (document.getElementById('nadiProgramTitle')?.value || '').trim();
+  const iso   = (document.getElementById('nadiProgramDate')?.value || '').trim() || new Date().toISOString().slice(0,10);
+  const slug  = title ? title.toLowerCase().replace(/[^\p{L}\p{N}]+/gu,'-').replace(/^-+|-+$/g,'') : 'sesi-nadi';
+  return slug + '_' + iso;
+}
+function updateLiveSessionBadge(){
+  const badge = document.getElementById('liveSessionLabel');
+  if (badge) badge.textContent = NADI_LIVE_SESSION_ID ? NADI_LIVE_SESSION_ID : '-';
+}
+async function loadLiveSessionsForDate(){
+  try{
+    const iso = (document.getElementById('nadiProgramDate')?.value || new Date().toISOString().slice(0,10)).trim();
+    const res = await getJSON({ action:'listNadiSessionsLive', date: iso }, { silent:true });
+    const sel = document.getElementById('nadiSessionSelect');
+    if (!sel) return;
+    sel.innerHTML = '';
+    const opt0 = document.createElement('option');
+    opt0.value = ''; opt0.textContent = '(Pilih sesi live untuk hari ini)';
+    sel.appendChild(opt0);
+    if (res.status === 'success' && Array.isArray(res.sessions)){
+      res.sessions.forEach(s => {
+        const o = document.createElement('option');
+        o.value = s.sessionId;
+        o.textContent = s.title + ' — ' + s.programDate + ' [' + s.sessionId + ']';
+        o.dataset.title = s.title;
+        // convert dd/MM/yyyy to yyyy-MM-dd for inputs
+        const m = /^([0-9]{2})\/([0-9]{2})\/([0-9]{4})$/.exec(String(s.programDate||''));
+        o.dataset.iso = m ? (m[3]+'-'+m[2]+'-'+m[1]) : '';
+        sel.appendChild(o);
       });
-      return ret;
-    };
-  }
+    } else {
+      const o = document.createElement('option');
+      o.value = ''; o.textContent = '(Tiada sesi live ditemui)';
+      sel.appendChild(o);
+    }
+  }catch(e){ /* senyap */ }
+}
+function useSelectedSession(){
+  const sel = document.getElementById('nadiSessionSelect');
+  if (!sel || !sel.value) { toast('Makluman','Sila pilih satu sesi dahulu','warning'); return; }
+  const iso = sel.options[sel.selectedIndex].dataset.iso || '';
+  const title = sel.options[sel.selectedIndex].dataset.title || '';
+  if (title){ const t = document.getElementById('nadiProgramTitle'); if (t) t.value = title; }
+  if (iso){ const d = document.getElementById('nadiProgramDate'); if (d) d.value = iso; }
+  NADI_LIVE_SESSION_ID = sel.value;
+  NADI_SESSION_LOCKED = true;
+  updateLiveSessionBadge();
+  startNadiLiveSync();
+  toast('Sesi dipilih', 'Sesi live ditetapkan: ' + NADI_LIVE_SESSION_ID, 'success');
+}
 
-  // Make live polling faster without changing other logic
-  function patchStartNadiLiveSync(){
-    if (window.__startLivePatched) return;
-    if (typeof window.startNadiLiveSync !== 'function') return;
-    if (typeof window.pullNadiLiveOnce !== 'function') return;
-    window.__startLivePatched = true;
-
-    const _origStart = window.startNadiLiveSync;
-    window.startNadiLiveSync = function(){
-      // run original
-      const ret = _origStart.apply(this, arguments);
-      try{
-        // reset the timer to 2s
-        if (window.nadiLiveTimer) { clearInterval(window.nadiLiveTimer); }
-        window.nadiLiveTimer = setInterval(window.pullNadiLiveOnce, 2000);
-      }catch(e){}
-      return ret;
-    };
-  }
-
-  onReady(() => {
-    attachLiveListenersOnce();
-    wrapAddNadiRow();
-    patchStartNadiLiveSync();
-  });
-})();
 </script>
+
 </body>
 </html>
